fix style